--- a/keras/keras.ipynb
+++ b/keras/keras.ipynb
@@ -14,7 +14,7 @@
     "# Note that Keras should only be imported after the backend\n",
     "# has been configured. The backend cannot be changed once the\n",
     "# package is imported.\n",
-    "import keras"
+    "from tensorflow import keras"
    ]
   },
   {
