--- a/load_preprocess/images.ipynb
+++ b/load_preprocess/images.ipynb
@@ -3842,7 +3842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3869,10 +3869,32 @@
     }
    ],
    "source": [
-    "model.fit(\n",
+    "# model.fit(\n",
+    "#   train_ds,\n",
+    "#   validation_data=val_ds,\n",
+    "#   epochs=3\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "isualize training results\n",
+    "Create plots of the loss and accuracy on the training and validation sets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs=5\n",
+    "history = model.fit(\n",
     "  train_ds,\n",
     "  validation_data=val_ds,\n",
-    "  epochs=3\n",
+    "  epochs=epochs\n",
     ")"
    ]
   },
@@ -3881,7 +3903,346 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
+    "\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']\n",
+    "\n",
+    "epochs_range = range(epochs)\n",
+    "\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
+    "plt.plot(epochs_range, val_acc, label='Validation Accuracy')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.title('Training and Validation Accuracy')\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(epochs_range, loss, label='Training Loss')\n",
+    "plt.plot(epochs_range, val_loss, label='Validation Loss')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.title('Training and Validation Loss')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overfitting\n",
+    "In the plots above, the training accuracy is increasing linearly over time, whereas validation accuracy stalls around 60% in the training process. Also, the difference in accuracy between training and validation accuracy is noticeable—a sign of overfitting.\n",
+    "\n",
+    "When there are a small number of training examples, the model sometimes learns from noises or unwanted details from training examples—to an extent that it negatively impacts the performance of the model on new examples. This phenomenon is known as overfitting. It means that the model will have a difficult time generalizing on a new dataset.\n",
+    "\n",
+    "There are multiple ways to fight overfitting in the training process. In this tutorial, you'll use data augmentation and add dropout to your model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data augmentation\n",
+    "Overfitting generally occurs when there are a small number of training examples. Data augmentation takes the approach of generating additional training data from your existing examples by augmenting them using random transformations that yield believable-looking images. This helps expose the model to more aspects of the data and generalize better.\n",
+    "\n",
+    "You will implement data augmentation using the following Keras preprocessing layers: tf.keras.layers.RandomFlip, tf.keras.layers.RandomRotation, and tf.keras.layers.RandomZoom. These can be included inside your model like other layers, and run on the GPU."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras\n",
+    "from keras.models import Sequential, layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_augmentation = keras.Sequential(\n",
+    "  [\n",
+    "    keras.layers.RandomFlip(\"horizontal\",\n",
+    "                      input_shape=(img_height,\n",
+    "                                  img_width,\n",
+    "                                  3)),\n",
+    "    keras.layers.RandomRotation(0.1),\n",
+    "    keras.layers.RandomZoom(0.1),\n",
+    "  ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 10))\n",
+    "for images, _ in train_ds.take(1):\n",
+    "  for i in range(9):\n",
+    "    augmented_images = data_augmentation(images)\n",
+    "    ax = plt.subplot(3, 3, i + 1)\n",
+    "    plt.imshow(augmented_images[0].numpy().astype(\"uint8\"))\n",
+    "    plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dropout\n",
+    "Another technique to reduce overfitting is to introduce dropout regularization to the network.\n",
+    "\n",
+    "When you apply dropout to a layer, it randomly drops out (by setting the activation to zero) a number of output units from the layer during the training process. Dropout takes a fractional number as its input value, in the form such as 0.1, 0.2, 0.4, etc. This means dropping out 10%, 20% or 40% of the output units randomly from the applied layer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential([\n",
+    "  data_augmentation,\n",
+    "  layers.Rescaling(1./255),\n",
+    "  layers.Conv2D(16, 3, padding='same', activation='relu'),\n",
+    "  layers.MaxPooling2D(),\n",
+    "  layers.Conv2D(32, 3, padding='same', activation='relu'),\n",
+    "  layers.MaxPooling2D(),\n",
+    "  layers.Conv2D(64, 3, padding='same', activation='relu'),\n",
+    "  layers.MaxPooling2D(),\n",
+    "  layers.Dropout(0.2),\n",
+    "  layers.Flatten(),\n",
+    "  layers.Dense(128, activation='relu'),\n",
+    "  layers.Dense(num_classes, name=\"outputs\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam',\n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 15\n",
+    "history = model.fit(\n",
+    "  train_ds,\n",
+    "  validation_data=val_ds,\n",
+    "  epochs=epochs\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
+    "\n",
+    "loss = history.history['loss']\n",
+    "val_loss = history.history['val_loss']\n",
+    "\n",
+    "epochs_range = range(epochs)\n",
+    "\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(epochs_range, acc, label='Training Accuracy')\n",
+    "plt.plot(epochs_range, val_acc, label='Validation Accuracy')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.title('Training and Validation Accuracy')\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(epochs_range, loss, label='Training Loss')\n",
+    "plt.plot(epochs_range, val_loss, label='Validation Loss')\n",
+    "plt.legend(loc='upper right')\n",
+    "plt.title('Training and Validation Loss')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predict on new data\n",
+    "Use your model to classify an image that wasn't included in the training or validation sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "sunflower_url = \"https://storage.googleapis.com/download.tensorflow.org/example_images/592px-Red_sunflower.jpg\"\n",
+    "sunflower_path = tf.keras.utils.get_file('Red_sunflower', origin=sunflower_url, cache_subdir=os.getcwd()+'/'+'sunflower')\n",
+    "\n",
+    "img = tf.keras.utils.load_img(\n",
+    "    sunflower_path, target_size=(img_height, img_width)\n",
+    ")\n",
+    "img_array = tf.keras.utils.img_to_array(img)\n",
+    "img_array = tf.expand_dims(img_array, 0) # make tensor      Create a batch\n",
+    "\n",
+    "predictions = model.predict(img_array)\n",
+    "score = tf.nn.softmax(predictions[0])\n",
+    "\n",
+    "print(\n",
+    "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
+    "    .format(class_names[np.argmax(score)], 100 * np.max(score))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use TensorFlow Lite\n",
+    "TensorFlow Lite is a set of tools that enables on-device machine learning by helping developers run their models on mobile, embedded, and edge devices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Convert the Keras Sequential model to a TensorFlow Lite model\n",
+    "To use the trained model with on-device applications, first convert it to a smaller and more efficient model format called a TensorFlow Lite model.\n",
+    "\n",
+    "In this example, take the trained Keras Sequential model and use tf.lite.TFLiteConverter.from_keras_model to generate a TensorFlow Lite model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the model.\n",
+    "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
+    "tflite_model = converter.convert()\n",
+    "\n",
+    "# Save the model.\n",
+    "with open('model.tflite', 'wb') as f:\n",
+    "  f.write(tflite_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can access the TensorFlow Lite saved model signatures in Python via the tf.lite.Interpreter class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TF_MODEL_FILE_PATH = 'model.tflite' # The default path to the saved TensorFlow Lite model\n",
+    "\n",
+    "interpreter = tf.lite.Interpreter(model_path=TF_MODEL_FILE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interpreter.get_signature_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, you have one default signature called serving_default. In addition, the name of the 'inputs' is 'sequential_1_input', while the 'outputs' are called 'outputs'. You can look up these first and last Keras layer names when running Model.summary, as demonstrated earlier in this tutorial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classify_lite = interpreter.get_signature_runner('serving_default')\n",
+    "classify_lite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "imilar to what you did earlier in the tutorial, you can use the TensorFlow Lite model to classify images that weren't included in the training or validation sets.\n",
+    "\n",
+    "You have already tensorized that image and saved it as img_array. Now, pass it to the first argument (the name of the 'inputs') of the loaded TensorFlow Lite model (predictions_lite), compute softmax activations, and then print the prediction for the class with the highest computed probability."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_lite = classify_lite(sequential_1_input=img_array)['outputs']\n",
+    "score_lite = tf.nn.softmax(predictions_lite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\n",
+    "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
+    "    .format(class_names[np.argmax(score_lite)], 100 * np.max(score_lite))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The prediction generated by the lite model should be almost identical to the predictions generated by the original model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.max(np.abs(predictions - predictions_lite)))"
+   ]
   }
  ],
  "metadata": {
