--- a/keras/kerasNLP.ipynb
+++ b/keras/kerasNLP.ipynb
@@ -13,11 +13,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install -q --upgrade keras-nlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras_nlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "\n",
-    "os.environ[\"KERAS_BACKEND\"] = \"jax\"  # or \"tensorflow\" or \"torch\"\n",
+    "os.environ[\"KERAS_BACKEND\"] = \"tensorflow\"  # or \"tensorflow\" or \"torch\"\n",
     "\n",
-    "import keras_nlp\n",
+    "\n",
     "import keras\n",
     "\n",
     "# Use mixed precision to speed up all training in this guide.\n",
@@ -38,34 +56,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data_path = 'D:/a27_YEARS_OLD/deep_learning/tensoflow/aclImdb_v1/aclImdb/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 25000 files belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "BATCH_SIZE = 16\n",
     "imdb_train = keras.utils.text_dataset_from_directory(\n",
-    "    \"aclImdb/train\",\n",
+    "    data_path + 'train',\n",
     "    batch_size=BATCH_SIZE,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 25000 files belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "imdb_test = keras.utils.text_dataset_from_directory(\n",
-    "    \"aclImdb/test\",\n",
+    "    data_path + 'test',\n",
     "    batch_size=BATCH_SIZE,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<tf.Tensor: shape=(), dtype=string, numpy=b\"This was the best documentary I've ever seen!! I just saw Lords of Dogtown and wanted to know more about Stacy Peralta, and was surprised and happy to find out this was one of his films as well. Great Job Stacy! I was kicking back at work last week, bored O*&^%less and this movie came on. Growing up in Orange County in the 80's I surfed up and down the local beaches and so did my dad when he was a teenager. I grew up at the beach, my parents took me every weekend, I body surfed, boogeyboarded then moved up from there. This movie just captivated me. It was way before my time but it was awesome to see what these guys went through..TRUE PIONEERS! This movie is a collectors item.\">, <tf.Tensor: shape=(), dtype=int32, numpy=1>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Inspect first review\n",
     "# Format is (review text tensor, label tensor)\n",
@@ -81,9 +132,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__path__', '__spec__', 'encoders', 'layers']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(keras_nlp))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'keras_nlp.layers' has no attribute 'BertClassifier'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m classifier \u001b[38;5;241m=\u001b[39m \u001b[43mkeras_nlp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlayers\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mBertClassifier\u001b[49m\u001b[38;5;241m.\u001b[39mfrom_preset(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbert_tiny_en_uncased_sst2\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Note: batched inputs expected so must wrap string in iterable\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'keras_nlp.layers' has no attribute 'BertClassifier'"
+     ]
+    }
+   ],
    "source": [
     "classifier = keras_nlp.models.BertClassifier.from_preset(\"bert_tiny_en_uncased_sst2\")\n",
     "# Note: batched inputs expected so must wrap string in iterable\n"
@@ -939,8 +1019,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
