--- a/CV/neural_style_transformer.ipynb
+++ b/CV/neural_style_transformer.ipynb
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tensor_to_image(tensor):\n",
-    "  tensor = tensor*255\n",
+    "  tensor = tensor*255 # tensor values from the range [0, 1] to [0, 255], which is the typical range for image pixel values.\n",
     "  tensor = np.array(tensor, dtype=np.uint8)\n",
-    "  if np.ndim(tensor)>3:\n",
-    "    assert tensor.shape[0] == 1\n",
-    "    tensor = tensor[0]\n",
-    "  return PIL.Image.fromarray(tensor)"
+    "  if np.ndim(tensor)>3: # This line checks if the tensor has more than 3 dimensions (i.e., it has a batch dimension).\n",
+    "    assert tensor.shape[0] == 1 # If it does, it asserts that the batch size is 1 and \n",
+    "    tensor = tensor[0] # then removes the batch dimension by indexing into the tensor with [0].\n",
+    "  return PIL.Image.fromarray(tensor) # numpy array to pil image"
    ]
   },
   {
@@ -69,36 +69,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_img(path_to_img):\n",
     "  max_dim = 512\n",
-    "  img = tf.io.read_file(path_to_img)\n",
+    "  img = tf.io.read_file(path_to_img) \n",
     "  img = tf.image.decode_image(img, channels=3)\n",
-    "  img = tf.image.convert_image_dtype(img, tf.float32)\n",
+    "  img = tf.image.convert_image_dtype(img, tf.float32) # shape=(256, 256, 3))\n",
     "\n",
-    "  shape = tf.cast(tf.shape(img)[:-1], tf.float32)\n",
-    "  long_dim = max(shape)\n",
-    "  scale = max_dim / long_dim\n",
+    "  shape = tf.cast(tf.shape(img)[:-1], tf.float32) #  tf.Tensor([256. 256.] shape=(2,),  dtype=float32)\n",
+    "# This line of code is extracting the shape of an image tensor, excluding the last dimension (typically the \n",
+    "# color channels), and casting the result to a floating-point data type.\n",
+    "  long_dim = max(shape) # 256\n",
+    "  scale = max_dim / long_dim # 512 / 256=2\n",
     "\n",
-    "  new_shape = tf.cast(shape * scale, tf.int32)\n",
+    "  new_shape = tf.cast(shape * scale, tf.int32) # [512, 512]\n",
     "\n",
-    "  img = tf.image.resize(img, new_shape)\n",
-    "  img = img[tf.newaxis, :]\n",
+    "  img = tf.image.resize(img, new_shape) # [512, 512,3]\n",
+    "  img = img[tf.newaxis, :] #(1, 512, 512, 3)\n",
     "  return img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def imshow(image, title=None):\n",
-    "  if len(image.shape) > 3:\n",
-    "    image = tf.squeeze(image, axis=0)\n",
+    "  if len(image.shape) > 3: # if has batch dimension \n",
+    "    image = tf.squeeze(image, axis=0) # drop batch dimension\n",
     "\n",
     "  plt.imshow(image)\n",
     "  if title:\n",
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +200,7 @@
     }
    ],
    "source": [
-    "tf.constant(content_image)"
+    "tf.constant(content_image) # convert to tensorflow tensor"
    ]
   },
   {
@@ -964,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1162,31 +1164,19 @@
     }
    ],
    "source": [
-    "vgg1.summary()"
+    "vgg1.summary() # input shape not mentioned"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "VGG19() got an unexpected keyword argument 'traning'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m vgg1 \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mkeras\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapplications\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mVGG19\u001b[49m\u001b[43m(\u001b[49m\u001b[43minclude_top\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweights\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mimagenet\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mtraning\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: VGG19() got an unexpected keyword argument 'traning'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tf.keras.applications import VGG16\n",
     "\n",
     "# Load the pre-trained VGG16 model\n",
-    "vgg1 = VGG16(weights=\"imagenet\", include_top=False, input_shape=(224, 224, 3))\n",
+    "vgg1 = VGG16(weights=\"imagenet\", include_top=False, input_shape=(224, 224, 3)) # input shape mentioned\n",
     "\n",
     "# Freeze the layers in the VGG16 model\n",
     "vgg1.trainable = False\n"
