--- a/layer_ custom/custom_training.ipynb
+++ b/layer_ custom/custom_training.ipynb
@@ -216,19 +216,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the ds_test object is not an instance of tf.data.Dataset, the assertion will raise an AssertionError with a message indicating that the object is not a valid dataset."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ds_test = ds_split[0]\n",
     "ds_train = ds_split[1]\n",
+    "# This line of code checks if the ds_test object is an instance of tf.data.Dataset.\n",
+    "# Assert that ds_test is a valid dataset object\n",
     "assert isinstance(ds_test, tf.data.Dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,12 +252,12 @@
     }
    ],
    "source": [
-    "print(info.features)\n"
+    "print(info.features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +272,7 @@
     }
    ],
    "source": [
-    "ds_test\n"
+    "ds_test"
    ]
   },
   {
@@ -471,14 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = tf.keras.Sequential([\n",
     "  tf.keras.layers.Dense(10, activation=tf.nn.relu, input_shape=(4,)),  # input shape required or no of features columns no \n",
     "  tf.keras.layers.Dense(10, activation=tf.nn.relu),\n",
-    "  tf.keras.layers.Dense(3) # output layer\n",
+    "  tf.keras.layers.Dense(3) # output layer 3 neuron node logits output without activation softmax\n",
     "])"
    ]
   },
@@ -606,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +635,7 @@
     }
    ],
    "source": [
-    "predictions = model(features) # one batch of features, 32 dataset per batch\n",
+    "predictions = model(features) # logits output one batch of features, 32 dataset per batch\n",
     "predictions[:5]"
    ]
   },
@@ -720,6 +729,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or we can compile model with loss_object and optimizer to calculate gradient and back propagation\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "calculate loss from logits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -758,6 +781,13 @@
     "tf.GradientTape(): Creates a context for recording gradients.\n",
     "loss_value = loss(model, inputs, targets, training=True): Computes the loss value.\n",
     "tape.gradient(loss_value, model.trainable_variables): Computes gradients of loss with respect to model's trainable variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "calculate gradients using GradientTape()"
    ]
   },
   {
@@ -931,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +974,7 @@
    ],
    "source": [
     "print(\"Step: {}, Initial Loss: {}\".format(optimizer.iterations.numpy(),\n",
-    "                                          loss_value.numpy()))"
+    "                                        loss_value.numpy()))"
    ]
   },
   {
@@ -1227,11 +1257,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -1269,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1316,7 @@
     }
    ],
    "source": [
-    "tf.stack([y,prediction],axis=1)"
+    "tf.stack([y,prediction],axis=1) # horizontal stack"
    ]
   },
   {
