--- a/layer_ custom/layer.ipynb
+++ b/layer_ custom/layer.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -321,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input_shape = (4,)  # input shape required or no of features columns no =4 for tensor"
+    "# input_shape = (4,)  # input shape required or no. of features columns no. =4 for tensor"
    ]
   },
   {
@@ -346,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +367,7 @@
    ],
    "source": [
     "# Verify weights\n",
-    "print(layer3.kernel.shape)  # Output: (784, 64)\n",
+    "print(layer3.kernel.shape) # columns x no. of output or class # Output: (784, 64)\n",
     "print(layer3.bias.shape)    # Output: (64,)\n",
     "\n",
     "\n",
