--- a/load_preprocess/images.ipynb
+++ b/load_preprocess/images.ipynb
@@ -159,13 +159,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lob Patterns\n",
+    "glob Patterns\n",
+    "\n",
     "*: Matches any characters (except /) in a directory level.\n",
+    "\n",
     "**: Matches any characters (including /) recursively.\n",
+    "\n",
     "?.jpg: Matches files with a single character before the .jpg extension.\n",
+    "\n",
     "Common Glob Patterns\n",
+    "\n",
     "*.jpg: Files with .jpg extension in the current directory.\n",
+    "\n",
     "*/*.jpg: Files with .jpg extension in subdirectories.\n",
+    "\n",
     "**/*.jpg: Files with .jpg extension in the current directory and subdirectories recursively."
    ]
   },
@@ -1057,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1087,7 @@
     "jpg_count = 0\n",
     "for subdir in os.listdir(root_dir):\n",
     "    dir_path = os.path.join(root_dir, subdir)\n",
-    "    \n",
+    "    #   \n",
     "    if os.path.isdir(dir_path):\n",
     "        jpg_count += sum(1 for file in os.listdir(dir_path) if file.endswith('.jpg'))\n",
     "        print(f'{subdir}: {jpg_count} .jpg files')\n",
