--- a/load_preprocess/csv.ipynb
+++ b/load_preprocess/csv.ipynb
@@ -1446,17 +1446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "titanic_features_dict = {name: np.array(value) \n",
-    "                         for name, value in titanic_features.items()}"
+    "                        for name, value in titanic_features.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
     }
    ],
    "source": [
-    "titanic_features.keys() "
+    "titanic_features.keys()"
    ]
   },
   {
@@ -1752,11 +1752,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "titanic_ds = tf.data.Dataset.from_tensor_slices((titanic_features_dict, titanic_labels))"
+    "titanic_ds = tf.data.Dataset.from_tensor_slices((titanic_features_dict, titanic_labels)) # double parentheses"
    ]
   },
   {
@@ -1852,6 +1852,13 @@
     "#     archive_format='auto',\n",
     "#     cache_subdir='models'\n",
     "# )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### read csv from file path"
    ]
   },
   {
@@ -1955,6 +1962,13 @@
     "    print(f\"{key:20s}: {value}\")\n",
     "  print()\n",
     "  print(f\"{'label':20s}: {label}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### read csv from zip compressed file"
    ]
   },
   {
