--- a/load_preprocess/pandas.ipynb
+++ b/load_preprocess/pandas.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
     }
    ],
    "source": [
-    "normalizer = tf.keras.layers.Normalization(axis=-1)\n",
+    "normalizer = tf.keras.layers.Normalization(axis=-1) # he normalization layer would normalize each feature to have zero mean and unit variance.\n",
     "normalizer"
    ]
   },
@@ -498,6 +498,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "combine features and target in a tensor object "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -580,11 +587,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_features_dict = {key: value.to_numpy()[:, tf.newaxis] for key, value in dict(numeric_features).items()}\n",
+    "numeric_features_dict = {key: value.to_numpy()[:, tf.newaxis] for key, value in dict(numeric_features).items()} # dataframe dict\n",
     "target_array =  target.to_numpy()[:, tf.newaxis]"
    ]
   },
@@ -769,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +796,7 @@
    ],
    "source": [
     "inputs = {}\n",
-    "for name, column in numeric_features.items():\n",
+    "for name, column in numeric_features.items(): # dataframe items\n",
     "  inputs[name] = tf.keras.Input(\n",
     "      shape=(1,), name=name, dtype=tf.float32)\n",
     "\n",
@@ -798,16 +805,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xs = [value for key, value in sorted(inputs.items())]\n",
+    "xs = [value for key, value in sorted(inputs.items())] # his line sorts the inputs dictionary by key and extracts the corresponding values into a list called xs\n",
     "\n",
-    "concat = tf.keras.layers.Concatenate(axis=1)\n",
+    "concat = tf.keras.layers.Concatenate(axis=1) # This line creates a Concatenate layer, which is a Keras layer that concatenates a list of inputs along a specified axis.\n",
     "x = concat(xs)\n",
     "\n",
-    "normalizer = tf.keras.layers.Normalization(axis=-1)\n",
+    "normalizer = tf.keras.layers.Normalization(axis=-1) # -1 to 1\n",
     "normalizer.adapt(np.concatenate([value for key, value in sorted(numeric_features_dict.items())], axis=1))\n",
     "\n",
     "x = normalizer(x)\n",
@@ -821,6 +828,23 @@
     "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
     "              metrics=['accuracy'],\n",
     "              run_eagerly=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inputs = {\n",
+    "#     'a': tf.constant([1, 2, 3]),\n",
+    "#     'b': tf.constant([4, 5, 6]),\n",
+    "#     'c': tf.constant([7, 8, 9])\n",
+    "# }\n",
+    "\n",
+    "# # after concat\n",
+    "\n",
+    "# x = tf.constant([[1, 2, 3, 4, 5, 6, 7, 8, 9]])"
    ]
   },
   {
