--- a/recommenders/recomend.ipynb
+++ b/recommenders/recomend.ipynb
@@ -279,11 +279,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_titles_vocabulary = tf.keras.layers.StringLookup(mask_token=None)\n",
+    "movie_titles_vocabulary = tf.keras.layers.StringLookup(mask_token=None) # which is used to convert string inputs into numerical representations.\n",
     "movie_titles_vocabulary.adapt(movies)"
    ]
   },
