--- a/load_preprocess/images.ipynb
+++ b/load_preprocess/images.ipynb
@@ -2929,11 +2929,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Configure the dataset for performance\n",
     "Let's make sure to use buffered prefetching so you can yield data from disk without having I/O become blocking. These are two important methods you should use when loading data:\n",
@@ -3673,7 +3668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3681,9 +3676,20 @@
     "  # Convert the path to a list of path components\n",
     "  parts = tf.strings.split(file_path, os.path.sep)\n",
     "  # The second to last is the class-directory\n",
-    "  one_hot = parts[-2] == class_names\n",
+    "  one_hot = parts[-2] == class_names # 1(true) or 0(false) The result is a boolean array where each element is \n",
+    "  # True if the corresponding class name matches parts[-2], and False otherwise.\n",
     "  # Integer encode the label\n",
-    "  return tf.argmax(one_hot)"
+    "  return tf.argmax(one_hot) # index 0,1,2,3.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Suppose parts[-2] is a string \"apple\" and class_names is an array [\"banana\", \"apple\", \"orange\"]. The result would be:\n",
+    "#     one_hot = [False, True, False]"
    ]
   },
   {
@@ -4116,7 +4122,7 @@
     "    sunflower_path, target_size=(img_height, img_width)\n",
     ")\n",
     "img_array = tf.keras.utils.img_to_array(img)\n",
-    "img_array = tf.expand_dims(img_array, 0) # make tensor      Create a batch\n",
+    "img_array = tf.expand_dims(img_array, 0) # make tensor      Create a batch dimension\n",
     "\n",
     "predictions = model.predict(img_array)\n",
     "score = tf.nn.softmax(predictions[0])\n",
