imbalance data handling

--- a/tensoflow/fittings.ipynb
+++ b/tensoflow/fittings.ipynb
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# logdir = pathlib.Path(tempfile.mkdtemp())/\"tensorboard_logs\"\n"
+    "logdir = pathlib.Path(tempfile.mkdtemp())/\"tensorboard_logs\"\n"
    ]
   },
   {
@@ -177,7 +177,7 @@
     }
    ],
    "source": [
-    "# logdir"
+    "logdir"
    ]
   },
   {
@@ -254,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "author = '%E0%A6%AE%E0%A6%B9%E0%A6%AE%E0%A7%8D%E0%A6%AE%E0%A6%A6'"
+    "# author = '%E0%A6%AE%E0%A6%B9%E0%A6%AE%E0%A7%8D%E0%A6%AE%E0%A6%A6'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -278,12 +278,12 @@
     }
    ],
    "source": [
-    "urllib.parse.unquote_plus(f'{author}')"
+    "# urllib.parse.unquote_plus(f'{author}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
     }
    ],
    "source": [
-    "urllib.parse.unquote_plus(author)"
+    "# urllib.parse.unquote_plus(author)"
    ]
   },
   {
