--- a/tensoflow/fittings.ipynb
+++ b/tensoflow/fittings.ipynb
@@ -377,13 +377,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pack_row(*row):\n",
-    "  label = row[0]\n",
-    "  features = tf.stack(row[1:],1)\n",
+    "  label = row[0] # first column\n",
+    "  features = tf.stack(row[1:],1) # from  second column ,axis 1 horizontally stacked\n",
     "  return features, label"
    ]
   },
@@ -1079,6 +1079,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "target = tf.reshape(target, (-1, 1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -1100,6 +1107,13 @@
    ],
    "source": [
     "size_histories['Tiny'] = fit(tiny_model, 'sizes/Tiny')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "solve: target = tf.reshape(target, (-1, 1))"
    ]
   },
   {
@@ -1261,6 +1275,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "solve: target = tf.reshape(target, (-1, 1))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1396,10 +1417,10 @@
    "source": [
     "l2_model = tf.keras.Sequential([\n",
     "    layers.Dense(512, activation='elu',\n",
-    "                 kernel_regularizer=regularizers.l2(0.001),\n",
+    "                 kernel_regularizer=regularizers.l2(0.001), #lambda = 0.001\n",
     "                 input_shape=(FEATURES,)),\n",
     "    layers.Dense(512, activation='elu',\n",
-    "                 kernel_regularizer=regularizers.l2(0.001)),\n",
+    "                 kernel_regularizer=regularizers.l2(0.001)), \n",
     "    layers.Dense(512, activation='elu',\n",
     "                 kernel_regularizer=regularizers.l2(0.001)),\n",
     "    layers.Dense(512, activation='elu',\n",
@@ -1472,7 +1493,7 @@
    "source": [
     "dropout_model = tf.keras.Sequential([\n",
     "    layers.Dense(512, activation='elu', input_shape=(FEATURES,)),\n",
-    "    layers.Dropout(0.5),\n",
+    "    layers.Dropout(0.5), # 50% of the neurons will be dropped out during training.\n",
     "    layers.Dense(512, activation='elu'),\n",
     "    layers.Dropout(0.5),\n",
     "    layers.Dense(512, activation='elu'),\n",
