--- a/tensoflow/regressor.ipynb
+++ b/tensoflow/regressor.ipynb
@@ -1179,8 +1179,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "y = mx + c"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1218,7 @@
     }
    ],
    "source": [
-    "horsepower_model.predict(horsepower[:10])"
+    "horsepower_model.predict(horsepower[:10]) # 10 inputs 10 outputs"
    ]
   },
   {
