--- a/tensoflow/tensorflow.ipynb
+++ b/tensoflow/tensorflow.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
     }
    ],
    "source": [
-    "predictions1 = model(x_train[:1]).numpy() # row : column =1 for 1 digit\n",
+    "predictions1 = model(x_train[:1]).numpy() # \n",
     "predictions"
    ]
   },
