--- a/tensoflow/text_classifier.ipynb
+++ b/tensoflow/text_classifier.ipynb
@@ -1492,6 +1492,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "label automatically generated based on directory neg and pos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
