--- a/timeseries/timeseries.ipynb
+++ b/timeseries/timeseries.ipynb
@@ -1361,13 +1361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "wv = df['wv (m/s)']\n",
-    "bad_wv = wv == -9999.0\n",
-    "wv[bad_wv] = 0.0"
+    "bad_wv = wv == -9999.0 # get a list of true and false values\n",
+    "wv[bad_wv] = 0.0 # index corresponding true wv set to zero"
    ]
   },
   {
@@ -1493,6 +1493,152 @@
    ],
    "source": [
     "df['max. wv (m/s)'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [0,1,2,3,4,5,6,7,8,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[0, 1]\n",
+      "[0, 1, 2]\n",
+      "[0, 1, 2, 3]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[0, 1, 2, 3, 4, 5]\n",
+      "[0, 1, 2, 3, 4, 5, 6]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(a)):\n",
+    "    print(a[0:i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          [0]\n",
+      "         [0, 1]\n",
+      "        [0, 1, 2]\n",
+      "       [0, 1, 2, 3]\n",
+      "      [0, 1, 2, 3, 4]\n",
+      "     [0, 1, 2, 3, 4, 5]\n",
+      "    [0, 1, 2, 3, 4, 5, 6]\n",
+      "   [0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "  [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      " [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(a)):\n",
+    "    print((len(a)-(i+1))*\" \",a[0:i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            [0]\n",
+      "                         [0, 1]\n",
+      "                      [0, 1, 2]\n",
+      "                   [0, 1, 2, 3]\n",
+      "                [0, 1, 2, 3, 4]\n",
+      "             [0, 1, 2, 3, 4, 5]\n",
+      "          [0, 1, 2, 3, 4, 5, 6]\n",
+      "       [0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "    [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      " [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(a)):\n",
+    "    print((len(a)-(i+1))*3*\" \",a[0:i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b= \"2[a]3[bc]\" # output = \"aabcbc\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=str()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(b)):\n",
+    "    if b[i] == \"[\":\n",
+    "        c = str()\n",
+    "        for j in range(i+1,len(b)):\n",
+    "            if b[j] == \"]\":\n",
+    "                break\n",
+    "            else:\n",
+    "                c += b[j]\n",
+    "        s += int(b[i-1])*c\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aabcbcbc'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
    ]
   },
   {
@@ -1872,8 +2018,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "frequency = 1/time period . Here time periods are year and date \n",
+    "\n",
+    "so we get two frequency components "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "find frequency components in a compound frequency wave using fourier transform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "convert spatial domain to frequency domain"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +2054,7 @@
     }
    ],
    "source": [
-    "fft = tf.signal.rfft(df['T (degC)'])\n",
+    "fft = tf.signal.rfft(df['T (degC)']) # find frequency components from the spatial domain`of temperature`\n",
     "no_freq_in_dataset = np.arange(0, len(fft))"
    ]
   },
@@ -2026,11 +2195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_samples_h = len(df['T (degC)'])\n",
+    "n_samples_h = len(df['T (degC)']) # number of hours in the dataset is the length of the dataset\n",
     "hours_per_year = 24*365.2524\n",
     "no_years_in_dataset = n_samples_h/(hours_per_year)"
    ]
@@ -2097,11 +2266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_of_freq_per_year = no_freq_in_dataset/no_years_in_dataset    #???????"
+    "no_of_freq_per_year = no_freq_in_dataset/no_years_in_dataset    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "= (no_freq/dataset)/(no_years/dataset)"
    ]
   },
   {
